--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ html{
     font-family: 'Poppins', sans-serif !important;
 }
 body {
+    margin-top: 50px;
     font-family: 'Poppins', sans-serif !important;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
@@ -51,3 +52,8 @@ h1,h2,h3,h4,h5{
     margin-left:10px;
     margin-right:10px;
   }
+
+.p-atasbawah{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
