--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ h1,h2,h3,h4,h5{
     font-family: 'Poppins', sans-serif !important;
 }
 
+input{
+  font-family: 'Poppins', sans-serif !important;
+}
 #red{
     color: #E1241A;
 }
@@ -56,4 +59,12 @@ h1,h2,h3,h4,h5{
 .p-atasbawah{
     padding-top: 5%;
     padding-bottom: 5%;
+}
+
+
+.bg-cover {
+  background-attachment: static;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
