--- a/css/styles.css
+++ b/css/styles.css
@@ -61,19 +61,9 @@ input{
     padding-bottom: 5%;
 }
 
-div.form
-{
-    display: block;
-    text-align: center;
+.txt-center{
+  text-align: center;
 }
-form
-{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
 
 .bg-cover {
   background-attachment: static;
